--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,10 @@ android {
 
 dependencies {
 
+    implementation 'com.google.android.material:material:1.8.0'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
